--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -7,6 +7,16 @@ body {
 
 /* general styling */
 
+.loading {
+  text-align: center;
+  width: 100%;
+}
+
+.loading ul {
+  margin: 0;
+  padding: 0;
+}
+
 .controls {
   width: 100%;
   height: 30px;
@@ -17,6 +27,7 @@ body {
   height: 30px;
   width: 5%;
 }
+
 .slide {
   position: fixed;
   display: block;
@@ -24,15 +35,6 @@ body {
   height: 100%;
   padding: 5%;
   margin: 0;
-}
-
-.slide-1 {
-}
-
-.slide-2 {
-}
-
-.slide-3 {
 }
 
 /* Animations */
