--- a/resources/private/templates/solution_2.html
+++ b/resources/private/templates/solution_2.html
@@ -1,4 +1,4 @@
-<div>
+<div class="slide-padding">
   <h1>Solution 2: HTML templates (with kioo)</h1>
   <button>Click Me!</button>
   <div id="code-snippet"></div>
