--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -17,6 +17,10 @@ body {
   padding: 0;
 }
 
+li {
+  line-height: 180%;
+}
+
 .controls {
   width: 100%;
   height: 30px;
@@ -33,27 +37,26 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  padding: 0 5%;
+  padding: 0;
   margin: 0;
+  overflow: scroll;
 }
 
-.with-parens:before {
-  position: fixed;
-  font-size: 100px;
-  transform:scale(0.5,3);
-  content: "(";
+.slide-padding {
+  padding: 0 5%;
 }
 
-.with-parens {
-  margin: 0 50px;
-  display: inline;
+.centered {
+  text-align: center;
+  width: 100%;
 }
 
-.with-parens:after {
-  position: fixed;
-  font-size: 100px;
-  transform:scale(0.5,3);
-  content: ")";
+.large-text {
+  font-size: xx-large;
+}
+
+.full-width {
+  width: 100%;
 }
 
 /* Animations */
