--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -1,8 +1,15 @@
 /* reset */
-html,body { height: 100%; }
+html, body {
+  height: 100%;
+}
+
 body {
   padding: 0;
   margin: 0;
+}
+
+li {
+  line-height: 180%;
 }
 
 /* general styling */
@@ -10,69 +17,64 @@ body {
 .loading {
   text-align: center;
   width: 100%;
-}
 
-.loading ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  line-height: 180%;
+  ul {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .controls {
   width: 100%;
-  height: 30px;
   top: 0;
-}
-.controls button {
-  float: left;
-  height: 30px;
-  width: 5%;
+
+  button {
+    float: left;
+    height: 30px;
+    width: 5%;
+  }
 }
 
 .slide {
   position: fixed;
   display: block;
   width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
   overflow: scroll;
-}
 
-.slide-padding {
-  padding: 0 5%;
-}
+  .slide-padding {
+    padding: 0 5%;
+  }
 
-.centered {
-  text-align: center;
-  width: 100%;
-}
+  .centered {
+    text-align: center;
+    width: 100%;
+  }
 
-.large-text {
-  font-size: xx-large;
-}
+  .large-text {
+    font-size: xx-large;
+  }
 
-.full-width {
-  width: 100%;
-}
+  .full-width {
+    width: 100%;
+  }
 
-pre.path {
-  background-color: #DDD;
-  margin-bottom: 0;
-  margin-top: 10px;
-  padding: 1px 10px;
-}
-pre {
-  margin-top: 0;
-  border: solid;
-  border-color: #DDD;
+  pre {
+    margin-top: 0;
+    border: solid;
+    border-color: #DDD;
+
+    &.path {
+      background-color: #DDD;
+      margin-bottom: 0;
+      margin-top: 10px;
+      padding: 1px 10px;
+    }
+  }
 }
 
 /* Animations */
-
 @keyframes moveToLeft {
   from { }
   to { transform: translateX(-100%); }
@@ -95,30 +97,21 @@ pre {
 /* Forward transition */
 .forward-enter {
   animation: moveFromRight 0.6s ease both;
-}
-
-.forward-enter.forward-enter-active {
+  &.forward-enter-active {}
 }
 
 .forward-leave {
   animation: moveToLeft 0.6s ease both;
+  &.forward-leave-active {}
 }
-
-.forward-leave.forward-leave-active {
-}
-
 
 /* Backward transition */
 .backward-enter {
   animation: moveFromLeft 0.6s ease both;
-}
-
-.backward-enter.backward-enter-active {
+  &.backward-enter-active {}
 }
 
 .backward-leave {
   animation: moveToRight 0.6s ease both;
-}
-
-.backward-leave.backward-leave-active {
+  &.backward-leave-active {}
 }
