--- a/resources/private/templates/solution_2.html
+++ b/resources/private/templates/solution_2.html
@@ -1,5 +1,5 @@
-<div class="slide-padding">
-  <h1>Solution 2: HTML templates (with kioo)</h1>
+<div class="slide">
+  <h2>Solution 2: HTML templates (with kioo)</h2>
   <button>Click Me!</button>
   <div id="code-snippet"></div>
 </div>
