--- a/resources/private/templates/solution_2.html
+++ b/resources/private/templates/solution_2.html
@@ -1,5 +1,7 @@
 <div class="slide">
   <h2>Solution 2: HTML templates (with kioo)</h2>
-  <button>Click Me!</button>
+  <div class="demo-container">
+    <button class="big-button">Click Me!</button>
+  </div>
   <div id="code-snippet"></div>
 </div>
