--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -7,6 +7,11 @@ body {
   padding: 0;
   margin: 0;
   font-size: x-large;
+  font-family: Helvetica, Arial, Sans-Serif;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #1F1F1F;
+  background: #f3f6fa;
 }
 
 li {
@@ -18,6 +23,55 @@ ul {
   padding: 0;
 }
 
+a {
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  color: #3fb1a3;
+  text-decoration: none;
+  border-bottom: dotted 1px;
+  &:hover {
+    border-bottom-color: transparent;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: inherit;
+  font-weight: 300;
+  margin-bottom: 1em;
+  text-transform: uppercase;
+}
+
+h2 {
+  letter-spacing: 0.1em;
+}
+
+h3 {
+  letter-spacing: 0.025em;
+}
+
+.big-button {
+  background: none;
+  border: solid 1px;
+  color: inherit;
+  display: inline-block;
+  font-weight: 900;
+  letter-spacing: 2px;
+  font-size: x-large;
+  min-width: 18em;
+  padding: 0.75em 0;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  &:hover {
+    background: rgba(188, 202, 206, 0.15);
+    border-color: inherit;
+    cursor: pointer;
+  }
+}
+
 /* general styling */
 .loading {
   text-align: center;
@@ -25,25 +79,37 @@ ul {
 }
 
 .controls {
+  display: block;
+  min-height: 30px;
   width: 100%;
-  top: 0;
+  position: absolute;
+  padding: 0;
+  bottom: 10px;
 
   button {
     float: left;
     height: 30px;
     width: 5%;
+    border: none;
+    font-size: large;
+    background: transparent;
+    cursor: pointer;
+    &:active, &:focus {
+      outline: none;
+    }
   }
 }
 
 .slide {
   display: block;
-  padding: 0;
+  padding: 20px 0 0;
   margin: 0;
   font-size: xx-large;
 
   h2 {
     margin: 20px;
   }
+
 
   &.vertical-center {
     position: relative;
@@ -64,6 +130,12 @@ ul {
     width: 100%;
   }
 
+
+  .demo-container {
+    border: 1px solid #DDD;
+    padding: 20px;
+    background: #FFF;
+  }
   pre {
     margin-top: 0;
     border: solid;
@@ -73,9 +145,10 @@ ul {
 
     &.path {
       background-color: #DDD;
-      margin-bottom: 0;
-      margin-top: 10px;
+      margin: 0;
       padding: 1px 10px;
+      font-size: large;
+      color: #666;
     }
   }
 }
