Add localized example

--- a/resources/private/templates/localized.html
+++ b/resources/private/templates/localized.html
@@ -1,7 +1,6 @@
 <div class="slide">
   <div class="demo-container">
-    <span>Kioo says: </span>
-    <b id="kioo-says">what?</b>
+    <span data-localize="tower/say-hi">PLACEHOLDER</span>
   </div>
   <div id="code-snippet"/>
 </div>
