--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -100,6 +100,16 @@ h3 {
   }
 }
 
+.centered {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+
+code {
+  font-size: 130%;
+}
+
 .slide {
   display: block;
   padding: 20px 0 0;
@@ -119,11 +129,6 @@ h3 {
 
   &.left {
     margin: 0 5%;
-  }
-
-  &.centered {
-    text-align: center;
-    width: 100%;
   }
 
   &.full-width {
@@ -175,22 +180,22 @@ h3 {
 
 /* Forward transition */
 .forward-enter {
-  animation: moveFromRight 0.6s ease both;
+  animation: moveFromRight 0.4s ease both;
   &.forward-enter-active {}
 }
 
 .forward-leave {
-  animation: moveToLeft 0.6s ease both;
+  animation: moveToLeft 0.4s ease both;
   &.forward-leave-active {}
 }
 
 /* Backward transition */
 .backward-enter {
-  animation: moveFromLeft 0.6s ease both;
+  animation: moveFromLeft 0.4s ease both;
   &.backward-enter-active {}
 }
 
 .backward-leave {
-  animation: moveToRight 0.6s ease both;
+  animation: moveToRight 0.4s ease both;
   &.backward-leave-active {}
 }
