--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -159,6 +159,14 @@ code {
   }
 }
 
+.diagram {
+  transform: scale(0.90);
+  #speaker & {
+    transform-origin: left top;
+    transform: scale(0.45);
+  }
+}
+
 /* Animations */
 @keyframes moveToLeft {
   from { }
