Last major changes

--- a/resources/private/sass/app.scss
+++ b/resources/private/sass/app.scss
@@ -140,7 +140,7 @@ code {
   .demo-container {
     border: 1px solid #DDD;
     padding: 20px;
-    background: #FFF;
+    background-color: #FFF;
   }
   pre {
     margin-top: 0;
